Correct the rgba spacing

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 html {
   box-sizing: border-box;
-  font-family: 'Arsenal', sans-serif;
+  font-family: Arsenal, sans-serif;
 
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -60,8 +60,8 @@ nav {
 
 h1 {
   color: #fff;
-  text-shadow: 2px 2px 5px rgba(0,0,0,.5);
-  font-family: 'Lobster', cursive;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+  font-family: Lobster, cursive;
   font-size: 3rem;
   margin-bottom: 1rem;
 }
@@ -75,7 +75,7 @@ ul {
 
 h2 {
   display: inline-block;
-  font-family: 'Lobster', cursive;
+  font-family: Lobster, cursive;
   font-size: 1.8rem;
 }
 
@@ -137,7 +137,7 @@ a:hover {
 }
 
 h3 {
-  font-family: 'Lobster', cursive;
+  font-family: Lobster, cursive;
   font-size: 1.5rem;
   margin-bottom: .5rem;
   margin-top: 0;
@@ -183,7 +183,7 @@ h3 {
 .location-caption h2 {
   color: #fff;
   font-size: 1.3rem;
-  text-shadow: 1px 1px 3px rgba(0,0,0,.5);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
   margin: 0;
 }
 
@@ -237,7 +237,7 @@ dt {
   padding: 0 .5rem;
   background-color: #b2b2b2;
   color: #fff;
-  text-shadow: 1px 1px 3px rgba(0,0,0,.5);
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
 }
 
 .hour-content h2 {
@@ -254,7 +254,6 @@ dt {
 
 .copyright {
   text-align: center;
-  margin: 1rem;
   background-color: #b2b2b2;
   margin: 0;
   padding: .5rem;
@@ -399,7 +398,7 @@ dt {
   .location-caption h2 {
     color: #000;
     font-size: 2.5rem;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0);
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0);
     margin: 0;
   }
 
